--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<version>1.8.1</version>
 			<scope>test</scope>
 		</dependency>	
+		<dependency>
+			<groupId>com.singleList</groupId>
+			<artifactId>SingleList</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
